--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
 
   }
 
+  
 .form{
     position: absolute;
     top: 50%;
@@ -257,7 +258,7 @@ button {
 #overlay {
     position: absolute;
     opacity: 0;
-    top: 0;
+    top: 0; 
     bottom: 0;
     width: 100%;
     height: 100%;
@@ -268,14 +269,14 @@ button {
 #popup {
   color: #fff;
     position: absolute;
-    top: 50%;
-    left: 29.5%;
-    width: 78%;
-    height: 75%;
+    top: 41%;
+    left: 25%;
+    width: 88%;
+    height: 90%;
     padding: 50px;
     border-radius: 10px;
     box-sizing: border-box;
-    background: rgba(1, 0, 88, 0.877);
+    background: rgba(2, 1, 1, 0.89);
     margin-left: -250px; /*Half the value of width to center div*/
     margin-top: -250px; /*Half the value of height to center div*/
     z-index: -1;
@@ -591,7 +592,93 @@ z-index: 100;
     border-radius: 5px;
     margin-left: 25px;
 }
+.btnqr{
+  background: #039e90;
+  border: #039e90;
+  color: white;
+  border-radius: 5px;
+  margin-top: 15px;
+  padding: 8px 10px;
+}
+
+.btndownload{
+  background: #13039e;
+  border: #13039e;
+  color: white;
+  border-radius: 5px;
+  margin-top: 15px;
+  padding: 8px 10px;
+}
 
 .content-input{
   margin-top: 30px;
+}
+@keyframes move_wave {
+  0% {
+      transform: translateX(0) translateZ(0) scaleY(1)
+  }
+  50% {
+      transform: translateX(-25%) translateZ(0) scaleY(0.55)
+  }
+  100% {
+      transform: translateX(-50%) translateZ(0) scaleY(1)
+  }
+}
+.waveWrapper {
+  overflow: hidden;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  margin: auto;
+}
+.waveWrapperInner {
+  position: absolute;
+  width: 100%;
+  overflow: hidden;
+  height: 100%;
+  bottom: -1px;
+  background-image: linear-gradient(to top, #1404ff 20%, #27273c 80%);
+}
+.bgTop {
+  z-index: 15;
+  opacity: 0.5;
+}
+.bgMiddle {
+  z-index: 10;
+  opacity: 0.75;
+}
+.bgBottom {
+  z-index: 5;
+}
+.wave {
+  position: absolute;
+  left: 0;
+  width: 200%;
+  height: 100%;
+  background-repeat: repeat no-repeat;
+  background-position: 0 bottom;
+  transform-origin: center bottom;
+}
+.waveTop {
+  background-size: 50% 100px;
+}
+.waveAnimation .waveTop {
+animation: move-wave 3s;
+ -webkit-animation: move-wave 3s;
+ -webkit-animation-delay: 1s;
+ animation-delay: 1s;
+}
+.waveMiddle {
+  background-size: 50% 120px;
+}
+.waveAnimation .waveMiddle {
+  animation: move_wave 10s linear infinite;
+}
+.waveBottom {
+  background-size: 50% 100px;
+}
+.waveAnimation .waveBottom {
+  animation: move_wave 15s linear infinite;
 }
